--- a/task_1a/task_1a.ipynb
+++ b/task_1a/task_1a.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import cross_validate, KFold\n",
     "from sklearn.linear_model import Ridge\n",
+    "from tqdm import tqdm\n",
     "\n",
     "np.random.seed(1337)"
    ]
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -401,41 +402,106 @@
     "        # Model\n",
     "        model = Ridge(alpha=reg_alpha)\n",
     "        \n",
-    "        cv_results = cross_validate(model, X, y, cv=k,\n",
-    "                       scoring=('neg_mean_squared_error'))  \n",
+    "        cv_results = cross_validate(model, X, y, \n",
+    "                                    cv=KFold(n_splits=k, shuffle=True),\n",
+    "                                    scoring=('neg_mean_squared_error'))  \n",
     "        return np.sqrt(-(cv_results['test_score']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train k models from on the train folds, validate on validation fold\n",
+    "\n",
+    "def get_scores():\n",
+    "    # Array of the RMSE for each regularization parameter\n",
+    "    res_rmse = []\n",
+    "\n",
+    "    for reg_lambda in lambdas:\n",
+    "        # Perform the cross validation training\n",
+    "        val_folds_rmse = RidgeTraining.start(X, y, reg_lambda, k)\n",
+    "\n",
+    "        # Root mean squared error accumulated over k folds\n",
+    "        rmse = np.sum(val_folds_rmse) / k\n",
+    "\n",
+    "        # Add it to the array of RMSEs\n",
+    "        res_rmse.append(rmse)\n",
+    "\n",
+    "    return res_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4.807854695860909,\n",
+       " 4.716541949480812,\n",
+       " 4.8213851899610525,\n",
+       " 4.868712305766519,\n",
+       " 5.008551798418932]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The resulting scores\n",
+    "get_scores()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [11:01<00:00, 15.12it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.782138894024648, 4.780603370683907, 4.786653102642214, 4.8317253660937824, 4.940587067538074]\n"
+      "[4.80552433 4.80505721 4.81743581 4.87136873 4.97472616]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Train k models from on the train folds, validate on validation fold\n",
-    "# Array of the RMSE for each regularization parameter\n",
-    "res_rmse = []\n",
+    "# Average out the results of n_iterations\n",
+    "n_iter = 10000\n",
+    "res = np.zeros(5)\n",
     "\n",
-    "for reg_lambda in lambdas:\n",
-    "    # Perform the cross validation training\n",
-    "    val_folds_rmse = RidgeTraining.start(X, y, reg_lambda, k)\n",
+    "for _ in tqdm(range(n_iter)):\n",
+    "    res += get_scores()\n",
     "    \n",
-    "    # Root mean squared error accumulated over k folds\n",
-    "    rmse = np.sum(val_folds_rmse) / k\n",
-    "    \n",
-    "    # Add it to the array of RMSEs\n",
-    "    res_rmse.append(rmse)\n",
-    "    \n",
-    "print(res_rmse)"
+    "print(res/n_iter)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
