Add task1b fit_intercept=False

--- a/task_1b/task_1b.ipynb
+++ b/task_1b/task_1b.ipynb
@@ -314,15 +314,29 @@
        "(700, 21)"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.26      ,  0.        , -0.01      , -0.38      , -0.06      ,\n",
+       "        0.0676    ,  0.        ,  0.0001    ,  0.1444    ,  0.0036    ,\n",
+       "        0.77105159,  1.        ,  0.99004983,  0.68386141,  0.94176453,\n",
+       "        0.96638998,  1.        ,  0.99995   ,  0.92866464,  0.99820054,\n",
+       "        1.        ])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "X = transform_features(X)\n",
     "\n",
-    "X.shape"
+    "np.set_printoptions(suppress=True)\n",
+    "display(X.shape)\n",
+    "display(X[0, :])"
    ]
   },
   {
@@ -337,22 +351,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reg = LinearRegression()\n",
-    "\n",
-    "reg.fit(X, y)"
+    "reg = LinearRegression(fit_intercept=False).fit(X, y)"
    ]
   },
   {
@@ -363,12 +364,12 @@
     {
      "data": {
       "text/plain": [
-       "array([   262.09716383,   -384.34196458,   1844.79815384,   -321.67992018,\n",
-       "         2854.0118416 ,  -1965.25937459,     90.20969944,  -3791.14876648,\n",
-       "          553.92634622,  -4873.28557209,   -257.36281086,    378.05814838,\n",
-       "        -1838.46897984,    323.07744561,  -2846.46412765,  -4215.31927933,\n",
-       "          584.28414871,  -9369.80824142,   1417.22650604, -12489.13947329,\n",
-       "            0.        ])"
+       "array([   262.09716383,   -384.34196458,   1844.79815385,   -321.67992018,\n",
+       "         2854.0118415 ,  -1965.25937459,     90.20969943,  -3791.14876656,\n",
+       "          553.92634622,  -4873.28557194,   -257.36281086,    378.05814838,\n",
+       "        -1838.46897985,    323.07744561,  -2846.46412755,  -4215.31927934,\n",
+       "          584.2841487 ,  -9369.80824159,   1417.22650605, -12489.1394729 ,\n",
+       "        28316.40260664])"
       ]
      },
      "execution_count": 6,
@@ -377,8 +378,16 @@
     }
    ],
    "source": [
-    "reg.score(X, y)\n",
     "reg.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the submission"
    ]
   },
   {
