Update task1b savetxt fmt to %s

--- a/task_1b/task_1b.ipynb
+++ b/task_1b/task_1b.ipynb
@@ -372,13 +372,22 @@
        "        28316.40260664])"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.032689476479159985"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "reg.coef_"
+    "display(reg.coef_)\n",
+    "display(reg.score(X, y))"
    ]
   },
   {
@@ -387,16 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the submission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt('submission.csv', reg.coef_, delimiter='\\n', fmt=\"%f\")"
+    "np.savetxt('submission.csv', reg.coef_, delimiter='\\n', fmt=\"%s\")"
    ]
   },
   {
