Remove task_1b data shuffling

--- a/task_1b/task_1b.ipynb
+++ b/task_1b/task_1b.ipynb
@@ -10,9 +10,7 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "np.random.seed(1337)"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -154,56 +152,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>-0.26</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>-0.38</td>\n",
-       "      <td>-0.06</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>-0.43</td>\n",
+       "      <td>-0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>622</th>\n",
-       "      <td>-0.20</td>\n",
-       "      <td>-0.18</td>\n",
-       "      <td>0.00</td>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.29</td>\n",
+       "      <td>-0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>-0.41</td>\n",
+       "      <td>-0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.12</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>-0.43</td>\n",
+       "      <td>-0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.14</td>\n",
        "      <td>-0.12</td>\n",
        "      <td>-0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>-0.07</td>\n",
-       "      <td>-0.17</td>\n",
-       "      <td>-0.04</td>\n",
-       "      <td>-0.27</td>\n",
+       "      <td>-0.02</td>\n",
        "      <td>-0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>492</th>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>-0.18</td>\n",
-       "      <td>-0.20</td>\n",
-       "      <td>-0.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>-0.04</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>-0.02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       x1    x2    x3    x4    x5\n",
-       "107 -0.26  0.00 -0.01 -0.38 -0.06\n",
-       "622 -0.20 -0.18  0.00 -0.12 -0.08\n",
-       "47  -0.07 -0.17 -0.04 -0.27 -0.08\n",
-       "492  0.14  0.17 -0.18 -0.20 -0.02\n",
-       "25  -0.05 -0.05 -0.04 -0.05 -0.02"
+       "     x1    x2    x3    x4    x5\n",
+       "0  0.02  0.05 -0.09 -0.43 -0.08\n",
+       "1 -0.13  0.11 -0.08 -0.29 -0.03\n",
+       "2  0.08  0.06 -0.07 -0.41 -0.03\n",
+       "3  0.02 -0.12  0.01 -0.43 -0.02\n",
+       "4 -0.14 -0.12 -0.08 -0.02 -0.08"
       ]
      },
      "metadata": {},
@@ -212,11 +210,11 @@
     {
      "data": {
       "text/plain": [
-       "107     2.144951\n",
-       "622    10.414371\n",
-       "47      6.156960\n",
-       "492     1.748840\n",
-       "25      1.663411\n",
+       "0    3.579620\n",
+       "1    0.734869\n",
+       "2    4.287433\n",
+       "3    8.347827\n",
+       "4   -0.052718\n",
        "Name: y, dtype: float64"
       ]
      },
@@ -239,12 +237,9 @@
     "raw_df = pd.read_csv(data_filepath)\n",
     "display(raw_df.head())\n",
     "\n",
-    "# Shuffle the data\n",
-    "shuffled_df = raw_df.sample(frac=1)\n",
-    "\n",
     "# Split into features and labels (still dataframes)\n",
-    "X_df = shuffled_df.iloc[:, 2:]\n",
-    "y_df = shuffled_df.iloc[:, 1]\n",
+    "X_df = raw_df.iloc[:, 2:]\n",
+    "y_df = raw_df.iloc[:, 1]\n",
     "\n",
     "display(X_df.head())\n",
     "display(y_df.head())\n",
@@ -320,10 +315,10 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.26      ,  0.        , -0.01      , -0.38      , -0.06      ,\n",
-       "        0.0676    ,  0.        ,  0.0001    ,  0.1444    ,  0.0036    ,\n",
-       "        0.77105159,  1.        ,  0.99004983,  0.68386141,  0.94176453,\n",
-       "        0.96638998,  1.        ,  0.99995   ,  0.92866464,  0.99820054,\n",
+       "array([ 0.02      ,  0.05      , -0.09      , -0.43      , -0.08      ,\n",
+       "        0.0004    ,  0.0025    ,  0.0081    ,  0.1849    ,  0.0064    ,\n",
+       "        1.02020134,  1.0512711 ,  0.91393119,  0.65050909,  0.92311635,\n",
+       "        0.99980001,  0.99875026,  0.99595273,  0.90896575,  0.99680171,\n",
        "        1.        ])"
       ]
      },
@@ -364,12 +359,12 @@
     {
      "data": {
       "text/plain": [
-       "array([   262.09716383,   -384.34196458,   1844.79815385,   -321.67992018,\n",
-       "         2854.0118415 ,  -1965.25937459,     90.20969943,  -3791.14876656,\n",
-       "          553.92634622,  -4873.28557194,   -257.36281086,    378.05814838,\n",
-       "        -1838.46897985,    323.07744561,  -2846.46412755,  -4215.31927934,\n",
-       "          584.2841487 ,  -9369.80824159,   1417.22650605, -12489.1394729 ,\n",
-       "        28316.40260664])"
+       "array([   262.09716383,   -384.34196458,   1844.79815389,   -321.67992018,\n",
+       "         2854.01184156,  -1965.2593746 ,     90.20969944,  -3791.1487668 ,\n",
+       "          553.92634621,  -4873.28557203,   -257.36281086,    378.05814838,\n",
+       "        -1838.46897988,    323.07744561,  -2846.46412761,  -4215.31927936,\n",
+       "          584.28414872,  -9369.8082421 ,   1417.22650603, -12489.13947313,\n",
+       "        28316.4026075 ])"
       ]
      },
      "metadata": {},
@@ -378,7 +373,7 @@
     {
      "data": {
       "text/plain": [
-       "0.032689476479159985"
+       "0.03268947647915266"
       ]
      },
      "metadata": {},
