Update task_1b with data normalization

--- a/task_1b/task_1b.ipynb
+++ b/task_1b/task_1b.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -245,7 +246,8 @@
     "display(y_df.head())\n",
     "\n",
     "# Create numpy arrays from the pandas dataframes\n",
-    "X = X_df.to_numpy()\n",
+    "#X = X_df.to_numpy()\n",
+    "X = MinMaxScaler().fit_transform(X_df)\n",
     "y = y_df.to_numpy()\n",
     "\n",
     "print(X.shape, y.shape)"
@@ -294,6 +296,8 @@
     "    cosine = np.cos(data)\n",
     "\n",
     "    constant = np.ones(700).reshape(700, 1)\n",
+    "    \n",
+    "    assert((linear == data).all())\n",
     "\n",
     "    return np.hstack((linear, quadratic, exponential, cosine, constant))"
    ]
@@ -315,11 +319,11 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.02      ,  0.05      , -0.09      , -0.43      , -0.08      ,\n",
-       "        0.0004    ,  0.0025    ,  0.0081    ,  0.1849    ,  0.0064    ,\n",
-       "        1.02020134,  1.0512711 ,  0.91393119,  0.65050909,  0.92311635,\n",
-       "        0.99980001,  0.99875026,  0.99595273,  0.90896575,  0.99680171,\n",
-       "        1.        ])"
+       "array([0.56626506, 0.6025641 , 0.48148148, 0.09375   , 0.76190476,\n",
+       "       0.32065612, 0.3630835 , 0.23182442, 0.00878906, 0.58049887,\n",
+       "       1.761675  , 1.82679689, 1.61847036, 1.09828514, 2.14235301,\n",
+       "       0.84391059, 0.8238851 , 0.88630983, 0.99560869, 0.72352247,\n",
+       "       1.        ])"
       ]
      },
      "metadata": {},
@@ -348,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = LinearRegression(fit_intercept=False).fit(X, y)"
+    "reg = LinearRegression().fit(X, y)"
    ]
   },
   {
@@ -359,12 +363,12 @@
     {
      "data": {
       "text/plain": [
-       "array([   262.09716383,   -384.34196458,   1844.79815389,   -321.67992018,\n",
-       "         2854.01184156,  -1965.2593746 ,     90.20969944,  -3791.1487668 ,\n",
-       "          553.92634621,  -4873.28557203,   -257.36281086,    378.05814838,\n",
-       "        -1838.46897988,    323.07744561,  -2846.46412761,  -4215.31927936,\n",
-       "          584.28414872,  -9369.8082421 ,   1417.22650603, -12489.13947313,\n",
-       "        28316.4026075 ])"
+       "array([-1340.32042514,   -79.35369453,  -426.14899991,   747.2814417 ,\n",
+       "       -1515.35178074, -3292.84009675,   -93.63734621, -1128.35348962,\n",
+       "        1999.90296035, -3494.70398959,  1372.76919139,   103.24976491,\n",
+       "         421.8694849 ,  -752.21326689,  1544.21024437, -4949.96656452,\n",
+       "           2.95127537, -1797.89906342,  3141.79755364, -5123.36742139,\n",
+       "           0.        ])"
       ]
      },
      "metadata": {},
@@ -373,7 +377,7 @@
     {
      "data": {
       "text/plain": [
-       "0.03268947647915266"
+       "0.032197598187658105"
       ]
      },
      "metadata": {},
