Update task_1b with fit_intercept=False

--- a/task_1b/task_1b.ipynb
+++ b/task_1b/task_1b.ipynb
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = LinearRegression().fit(X, y)"
+    "reg = LinearRegression(fit_intercept=False).fit(X, y)"
    ]
   },
   {
@@ -363,12 +363,12 @@
     {
      "data": {
       "text/plain": [
-       "array([-1340.32042514,   -79.35369453,  -426.14899991,   747.2814417 ,\n",
-       "       -1515.35178074, -3292.84009675,   -93.63734621, -1128.35348962,\n",
-       "        1999.90296035, -3494.70398959,  1372.76919139,   103.24976491,\n",
-       "         421.8694849 ,  -752.21326689,  1544.21024437, -4949.96656452,\n",
-       "           2.95127537, -1797.89906342,  3141.79755364, -5123.36742139,\n",
-       "           0.        ])"
+       "array([-1340.32042515,   -79.35369453,  -426.14899991,   747.2814417 ,\n",
+       "       -1515.35178074, -3292.84009678,   -93.63734619, -1128.35348962,\n",
+       "        1999.90296034, -3494.70398959,  1372.7691914 ,   103.2497649 ,\n",
+       "         421.8694849 ,  -752.21326689,  1544.21024437, -4949.96656456,\n",
+       "           2.95127539, -1797.89906343,  3141.79755363, -5123.36742138,\n",
+       "        6034.22476174])"
       ]
      },
      "metadata": {},
@@ -377,7 +377,7 @@
     {
      "data": {
       "text/plain": [
-       "0.032197598187658105"
+       "0.03219759818764922"
       ]
      },
      "metadata": {},
