Add task_1b read_csv float_precision

--- a/task_1b/task_1b.ipynb
+++ b/task_1b/task_1b.ipynb
@@ -11,7 +11,8 @@
     "from tqdm import tqdm\n",
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "\n",
+    "np.random.seed(1337)"
    ]
   },
   {
@@ -153,56 +154,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>-0.09</td>\n",
-       "      <td>-0.43</td>\n",
+       "      <th>107</th>\n",
+       "      <td>-0.26</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>-0.38</td>\n",
+       "      <td>-0.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>622</th>\n",
+       "      <td>-0.20</td>\n",
+       "      <td>-0.18</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.12</td>\n",
        "      <td>-0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.13</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>-0.08</td>\n",
-       "      <td>-0.29</td>\n",
-       "      <td>-0.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.06</td>\n",
+       "      <th>47</th>\n",
        "      <td>-0.07</td>\n",
-       "      <td>-0.41</td>\n",
-       "      <td>-0.03</td>\n",
+       "      <td>-0.17</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>-0.27</td>\n",
+       "      <td>-0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.02</td>\n",
-       "      <td>-0.12</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>-0.43</td>\n",
+       "      <th>492</th>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>-0.18</td>\n",
+       "      <td>-0.20</td>\n",
        "      <td>-0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.14</td>\n",
-       "      <td>-0.12</td>\n",
-       "      <td>-0.08</td>\n",
+       "      <th>25</th>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>-0.05</td>\n",
        "      <td>-0.02</td>\n",
-       "      <td>-0.08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     x1    x2    x3    x4    x5\n",
-       "0  0.02  0.05 -0.09 -0.43 -0.08\n",
-       "1 -0.13  0.11 -0.08 -0.29 -0.03\n",
-       "2  0.08  0.06 -0.07 -0.41 -0.03\n",
-       "3  0.02 -0.12  0.01 -0.43 -0.02\n",
-       "4 -0.14 -0.12 -0.08 -0.02 -0.08"
+       "       x1    x2    x3    x4    x5\n",
+       "107 -0.26  0.00 -0.01 -0.38 -0.06\n",
+       "622 -0.20 -0.18  0.00 -0.12 -0.08\n",
+       "47  -0.07 -0.17 -0.04 -0.27 -0.08\n",
+       "492  0.14  0.17 -0.18 -0.20 -0.02\n",
+       "25  -0.05 -0.05 -0.04 -0.05 -0.02"
       ]
      },
      "metadata": {},
@@ -211,11 +212,11 @@
     {
      "data": {
       "text/plain": [
-       "0    3.579620\n",
-       "1    0.734869\n",
-       "2    4.287433\n",
-       "3    8.347827\n",
-       "4   -0.052718\n",
+       "107     2.144951\n",
+       "622    10.414371\n",
+       "47      6.156960\n",
+       "492     1.748840\n",
+       "25      1.663411\n",
        "Name: y, dtype: float64"
       ]
      },
@@ -231,23 +232,28 @@
     }
    ],
    "source": [
+    "np.set_printoptions(suppress=True)\n",
+    "\n",
+    "\n",
     "# load the data from a filepath\n",
     "data_filepath = 'data/train.csv'\n",
     "\n",
     "# create the dataframe\n",
-    "raw_df = pd.read_csv(data_filepath)\n",
+    "raw_df = pd.read_csv(data_filepath, float_precision=\"round_trip\")\n",
     "display(raw_df.head())\n",
     "\n",
+    "# Shuffle the data\n",
+    "shuffled_df = raw_df.sample(frac=1)\n",
+    "\n",
     "# Split into features and labels (still dataframes)\n",
-    "X_df = raw_df.iloc[:, 2:]\n",
-    "y_df = raw_df.iloc[:, 1]\n",
+    "X_df = shuffled_df.iloc[:, 2:]\n",
+    "y_df = shuffled_df.iloc[:, 1]\n",
     "\n",
     "display(X_df.head())\n",
     "display(y_df.head())\n",
     "\n",
     "# Create numpy arrays from the pandas dataframes\n",
-    "#X = X_df.to_numpy()\n",
-    "X = MinMaxScaler().fit_transform(X_df)\n",
+    "X = X_df.to_numpy()\n",
     "y = y_df.to_numpy()\n",
     "\n",
     "print(X.shape, y.shape)"
@@ -296,8 +302,6 @@
     "    cosine = np.cos(data)\n",
     "\n",
     "    constant = np.ones(700).reshape(700, 1)\n",
-    "    \n",
-    "    assert((linear == data).all())\n",
     "\n",
     "    return np.hstack((linear, quadratic, exponential, cosine, constant))"
    ]
@@ -319,11 +323,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0.56626506, 0.6025641 , 0.48148148, 0.09375   , 0.76190476,\n",
-       "       0.32065612, 0.3630835 , 0.23182442, 0.00878906, 0.58049887,\n",
-       "       1.761675  , 1.82679689, 1.61847036, 1.09828514, 2.14235301,\n",
-       "       0.84391059, 0.8238851 , 0.88630983, 0.99560869, 0.72352247,\n",
-       "       1.        ])"
+       "array([-0.26      ,  0.        , -0.01      , -0.38      , -0.06      ,\n",
+       "        0.0676    ,  0.        ,  0.0001    ,  0.1444    ,  0.0036    ,\n",
+       "        0.77105159,  1.        ,  0.99004983,  0.68386141,  0.94176453,\n",
+       "        0.96638998,  1.        ,  0.99995   ,  0.92866464,  0.99820054,\n",
+       "        1.        ])"
       ]
      },
      "metadata": {},
@@ -333,7 +337,6 @@
    "source": [
     "X = transform_features(X)\n",
     "\n",
-    "np.set_printoptions(suppress=True)\n",
     "display(X.shape)\n",
     "display(X[0, :])"
    ]
@@ -363,12 +366,12 @@
     {
      "data": {
       "text/plain": [
-       "array([-1340.32042515,   -79.35369453,  -426.14899991,   747.2814417 ,\n",
-       "       -1515.35178074, -3292.84009678,   -93.63734619, -1128.35348962,\n",
-       "        1999.90296034, -3494.70398959,  1372.7691914 ,   103.2497649 ,\n",
-       "         421.8694849 ,  -752.21326689,  1544.21024437, -4949.96656456,\n",
-       "           2.95127539, -1797.89906343,  3141.79755363, -5123.36742138,\n",
-       "        6034.22476174])"
+       "array([   262.09716383,   -384.34196458,   1844.79815384,   -321.67992019,\n",
+       "         2854.01184152,  -1965.2593746 ,     90.20969943,  -3791.14876652,\n",
+       "          553.92634622,  -4873.28557197,   -257.36281086,    378.05814838,\n",
+       "        -1838.46897984,    323.07744561,  -2846.46412758,  -4215.31927935,\n",
+       "          584.28414868,  -9369.8082415 ,   1417.22650605, -12489.13947298,\n",
+       "        28316.40260667])"
       ]
      },
      "metadata": {},
@@ -377,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "0.03219759818764922"
+       "0.03268947647912135"
       ]
      },
      "metadata": {},
@@ -395,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('submission.csv', reg.coef_, delimiter='\\n', fmt=\"%s\")"
+    "np.savetxt('submission.csv', reg.coef_, delimiter='\\n', fmt=\"%.12f\")"
    ]
   },
   {
