Change task_1b LinearRegression to Ridge

--- a/task_1b/task_1b.ipynb
+++ b/task_1b/task_1b.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression, Ridge\n",
     "\n",
     "np.random.seed(1337)"
    ]
@@ -355,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = LinearRegression(fit_intercept=False).fit(X, y)"
+    "reg = Ridge(alpha=1, fit_intercept=False).fit(X, y)"
    ]
   },
   {
@@ -366,12 +366,11 @@
     {
      "data": {
       "text/plain": [
-       "array([   262.09716383,   -384.34196458,   1844.79815384,   -321.67992019,\n",
-       "         2854.01184152,  -1965.2593746 ,     90.20969943,  -3791.14876652,\n",
-       "          553.92634622,  -4873.28557197,   -257.36281086,    378.05814838,\n",
-       "        -1838.46897984,    323.07744561,  -2846.46412758,  -4215.31927935,\n",
-       "          584.28414868,  -9369.8082415 ,   1417.22650605, -12489.13947298,\n",
-       "        28316.40260667])"
+       "array([ 1.29212527, -0.34609352,  1.08139671,  1.75272917,  1.26865007,\n",
+       "       -1.455314  , -2.54022248, -0.04567181,  0.72561501,  1.28742921,\n",
+       "        0.23309222, -1.74835185,  0.75830334,  2.0344196 ,  1.53017826,\n",
+       "        0.44611499,  0.98755929, -0.24532562, -0.63113936, -0.89821635,\n",
+       "       -0.27009702])"
       ]
      },
      "metadata": {},
@@ -380,7 +379,7 @@
     {
      "data": {
       "text/plain": [
-       "0.03268947647912135"
+       "0.01604841748054553"
       ]
      },
      "metadata": {},
