Fix task_2 outlier removal

--- a/task_2/task_2_data.ipynb
+++ b/task_2/task_2_data.ipynb
@@ -5647,6 +5647,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# SelectKBest features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Per label SVR models"
    ]
   },
